--- a/apps/html/index.html
+++ b/apps/html/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
-  <script src="https://unpkg.com/nexys@latest/dist/bundle.min.js"></script>
+  <script src="../../packages/nexys/bundle.js"></script>
   <script>
     var nexys = new window.nexys("API_KEY", { appName: "APP_NAME", debug: true, localStorage: { cryption: false }});
 
